SLT_Handler/Include/MMC/MMCWFP39.bas

Attribute VB_Name = "modMMCWin"


Global Const ST_NONE = &H0
Global Const ST_HOME_SWITCH = &H1
Global Const ST_POS_LIMIT = &H2
Global Const ST_NEG_LIMIT = &H4
Global Const ST_AMP_FAULT = &H8
Global Const ST_A_LIMIT = &H10
Global Const ST_V_LIMIT = &H20
Global Const ST_X_NEG_LIMIT = &H40
Global Const ST_X_POS_LIMIT = &H80
Global Const ST_ERROR_LIMIT = &H100
Global Const ST_PC_COMMAND = &H200
Global Const ST_OUT_OF_FRAMES = &H400
Global Const ST_AMP_POWER_ONOFF = &H800
Global Const ST_ABS_COMM_ERROR = &H1000
Global Const ST_INPOSITION_STATUS = &H2000
Global Const ST_RUN_STOP_COMMAND = &H4000
Global Const ST_COLLISION_STATE = &H8000

Global Const MAX_BD_NUM = 8
Global Const BD_AXIS_NUM = 8
Global Const GAIN_NUMBER = 5


Declare Function get_mmc_error Lib "MMCWFP39.dll" () As Integer
Declare Function get_version Lib "MMCWFP39.dll" () As Long
Declare Function get_axis_num Lib "MMCWFP39.dll" () As Integer
Declare Function get_bd_num Lib "MMCWFP39.dll" () As Integer
Declare Function get_velocity Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer

Declare Function mmc_initx Lib "MMCWFP39.dll" (ByVal nBdNum As Integer, lAddr As Long) As Integer
Declare Function version_chk Lib "MMCWFP39.dll" (ByVal bd As Integer, n As Integer) As Integer
Declare Function set_dpram_addr Lib "MMCWFP39.dll" (ByVal nBdNum As Integer, ByVal lAddr As Long) As Integer
Declare Function get_dpram_addr Lib "MMCWFP39.dll" (ByVal nBdNum As Integer, lAddr As Long) As Integer
Declare Function save_boot_frame Lib "MMCWFP39.dll" () As Integer

Declare Function mmc_axes Lib "MMCWFP39.dll" (ByVal bd As Integer, axes As Integer) As Integer
Declare Function mmc_all_axes Lib "MMCWFP39.dll" () As Integer
Declare Function get_stepper Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function set_stepper Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function set_servo Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function set_feedback Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_feedback Lib "MMCWFP39.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_closed_loop Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_closed_loop Lib "MMCWFP39.dll" (ByVal ax As Integer, n As Integer) As Integer
Declare Function set_unipolar Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal n As Integer) As Integer
Declare Function get_unipolar Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer

Declare Function set_abs_encoder Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function set_micro_stepper Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function get_micro_stepper Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer

Declare Function mmcDelay Lib "MMCWFP39.dll" (ByVal l As Long) As Integer
Declare Function mmc_dwell Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal l As Long) As Integer
Declare Function mmc_io_trigger Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal bitnum As Integer, ByVal state As Integer) As Integer

Declare Function get_counter Lib "MMCWFP39.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function get_sync_position Lib "MMCWFP39.dll" (pos_m As Double, pos_s As Double) As Integer

Declare Function set_position Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function get_position Lib "MMCWFP39.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function set_command Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal f As Double) As Integer
Declare Function get_command Lib "MMCWFP39.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function get_error Lib "MMCWFP39.dll" (ByVal ax As Integer, f As Double) As Integer
Declare Function get_com_velocity Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function get_act_velocity Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer

Declare Function in_sequence Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function in_motion Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function in_position Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function frames_left Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function motion_done Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function axis_done Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function axis_state Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function axis_source Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function axis_sourcex Lib "MMCWFP39.dll" (ByVal ax As Integer) As Long
Declare Function clear_status Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer
Declare Function frames_clear Lib "MMCWFP39.dll" (ByVal ax As Integer) As Integer

Declare Function map_axes Lib "MMCWFP39.dll" (ByVal n_axes As Integer, paxes As Integer) As Integer
Declare Function set_move_speed Lib "MMCWFP39.dll" (ByVal speed As Double) As Integer
Declare Function set_move_accel Lib "MMCWFP39.dll" (ByVal accel As Integer) As Integer
Declare Function set_arc_division Lib "MMCWFP39.dll" (ByVal dArc As Double) As Integer
Declare Function all_done Lib "MMCWFP39.dll" () As Integer
Declare Function move_2 Lib "MMCWFP39.dll" (ByVal X As Double, ByVal Y As Double) As Integer
Declare Function move_3 Lib "MMCWFP39.dll" (ByVal X As Double, ByVal Y As Double, ByVal z As Double) As Integer
Declare Function move_4 Lib "MMCWFP39.dll" (ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal w As Double) As Integer
Declare Function move_n Lib "MMCWFP39.dll" (pos As Double) As Integer
Declare Function move_2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal X As Double, ByVal Y As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move_3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move_4ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal ax4 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal w As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move_nax Lib "MMCWFP39.dll" (ByVal axlen As Integer, axes As Integer, pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move_2axgr Lib "MMCWFP39.dll" (ByVal gr As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal X As Double, ByVal Y As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move_3axgr Lib "MMCWFP39.dll" (ByVal gr As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function move_4axgr Lib "MMCWFP39.dll" (ByVal gr As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal ax4 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal w As Double, ByVal vel As Double, ByVal acc As Integer) As Integer

Declare Function smove_2 Lib "MMCWFP39.dll" (ByVal X As Double, ByVal Y As Double) As Integer
Declare Function smove_3 Lib "MMCWFP39.dll" (ByVal X As Double, ByVal Y As Double, ByVal z As Double) As Integer
Declare Function smove_4 Lib "MMCWFP39.dll" (ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal w As Double) As Integer
Declare Function smove_n Lib "MMCWFP39.dll" (pos As Double) As Integer
Declare Function smove_2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal X As Double, ByVal Y As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function smove_3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function smove_4ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal ax4 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal w As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function smove_nax Lib "MMCWFP39.dll" (ByVal axlen As Integer, axes As Integer, pos As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function smove_2axgr Lib "MMCWFP39.dll" (ByVal gr As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal X As Double, ByVal Y As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function smove_3axgr Lib "MMCWFP39.dll" (ByVal gr As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function smove_4axgr Lib "MMCWFP39.dll" (ByVal gr As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal ax4 As Integer, ByVal X As Double, ByVal Y As Double, ByVal z As Double, ByVal w As Double, ByVal vel As Double, ByVal acc As Integer) As Integer

Declare Function arc_2 Lib "MMCWFP39.dll" (ByVal xCenter As Double, ByVal yCenter As Double, ByVal angle As Double) As Integer
Declare Function arc_2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal x_center As Double, ByVal y_center As Double, ByVal angle As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_line_move2 Lib "MMCWFP39.dll" (ppntxy As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_line_move3 Lib "MMCWFP39.dll" (ppntxyz As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_line_move2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ppntxy As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function spl_line_move3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ppntxyz As Double, ByVal vel As Double, ByVal acc As Integer) As Integer

Declare Function spl_arc_move2 Lib "MMCWFP39.dll" (ByVal xc As Double, ByVal yc As Double, ppntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dir As Integer) As Integer
Declare Function spl_arc_move3 Lib "MMCWFP39.dll" (ByVal xc As Double, ByVal yc As Double, ppntxyz As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dir As Integer) As Integer
Declare Function spl_arc_move2ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal xc As Double, ByVal yc As Double, ppntxy As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dir As Integer) As Integer
Declare Function spl_arc_move3ax Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ByVal xc As Double, ByVal yc As Double, ppntxyz As Double, ByVal vel As Double, ByVal acc As Integer, ByVal dir As Integer) As Integer

Declare Function spl_move Lib "MMCWFP39.dll" (ByVal n As Integer, ByVal ax1 As Integer, ByVal ax2 As Integer, ByVal ax3 As Integer, ppntx As Double, ppnty As Double, ppntz As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function rect_move Lib "MMCWFP39.dll" (ByVal ax1 As Integer, ByVal ax2 As Integer, ppntxy As Double, ByVal vel As Double, ByVal acc As Integer) As Integer
Declare Function set_spl_auto_off Lib "MMCWFP39.dll" (ByVal ax As Integer, ByVal mode As Integer) As Integer
